css/styles.css
/* ... */
.contact-title::after {
	content: '';
	margin: 0 auto;
	margin-top: 10px;
	display: block;
	height: 5px;
	width: 150px;
	background: var(--clr-mid-light);
	left: 50%;
	border-radius: 5px;
}

.form-container {
	display: flex;
	justify-content: center;
	box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);
	width: 85%;
	margin: 0 auto;
	padding: 50px;
}

form {
	display: flex;
	justify-content: center;
	flex-direction: column;
	width: 100%;
	margin: 0 auto;
}

.form__group--item {
	margin: 0 auto;
	width: 85%;
}

input,
textarea {
	width: 100%;
	border: none;
	padding: 5px 5px 15px;
	border-bottom: 2px solid var(--clr-dark);
	margin-bottom: 10px;
	font-size: 1rem;
	font-family: var(--ff-primary);
	resize: none;
}

textarea {
	height: auto;
}

.form__item:focus {
	outline: none;
	border-bottom: 3px solid var(--clr-mid-light);
}

.form__item::placeholder {
	color: var(--clr-dark);
	font-family: var(--ff-primary);
	font-size: 1rem;
	opacity: 0.5;
}

.btn {
	width: 150px;
	height: 45px;
	font-size: 0.75rem;
	letter-spacing: 2px;
	font-weight: 700;
	color: #fff;
	background-color: var(--clr-dark);
	border: none;
	border-radius: 45px;
	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
	transition: all 0.3s ease 0s;
	cursor: pointer;
	outline: none;
	margin: 20px auto auto;
}

.btn:hover {
	background-color: #2ee59d;
	color: var(--clr-dark);
	border: none;
	box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
	transform: translateY(-7px);
}

.form__group--item.success textarea {
	border-color: #09c372;
}

.form__group--item.success input {
	border-color: #09c372;
}

.form__group--item.error textarea {
	border-color: #ff3860;
}

.form__group--item.error input {
	border-color: #ff3860;
}

.error {
	color: #ff3860;
	margin-bottom: 10px;
}

/* FOOTER SECTION */

.footer {
	min-height: 295px;
	margin: 150px auto auto;
	width: 100%;
	background-image: url('../img/desk.2.jpg');
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.footer__links {
	display: flex;
	justify-content: center;
	align-items: center;
	margin-bottom: 0;

	position: relative;
	top: 80px;
}

.footer__link {
	margin-top: 25px;
}

.footer__item:hover {
	color: var(--clr-mid-light);
	transition: color 0.3s ease-in-out;
}

.footer__item {
	color: var(--clr-light);
	margin: 15px;
}

.copyright {
	color: var(--clr-light);
	text-align: center;
	position: relative;
	top: 80px;
}

.copyright__text {
	margin: 0;
}

/* CONFIRMATION MODAL */

.modal {
	display: none;
	position: fixed;
	width: 100%;
	height: 100%;
	font-weight: 700;
	top: 23%;
	justify-content: center;
	max-height: 210px;
	text-align: center;
}

.success-message {
	background-color: var(--clr-light);
	max-width: 60%;
	border-radius: 20px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.success-title {
	font-size: 2rem;
	padding: 0 20px;
	margin-bottom: 20px;
}

.check {
	color: #09c372;
	position: relative;
	top: -10%;
}

/* Intersection Animation */

.right-name {
	opacity: 0;
	filter: blur(5px);
	transition: all 3s;
	transform: translateX(100%);
}

.right {
	opacity: 0;
	filter: blur(5px);
	transition: all 1s;
	transform: translateX(100%);
}

.right-img {
	opacity: 0;
	filter: blur(5px);
	transition: all 1.5s;
	transform: translateX(100%);
}

.left {
	opacity: 0;
	filter: blur(5px);
	transition: all 1.5s;
	transform: translateX(-100%);
}

.text-scale {
	opacity: 0;
	filter: blur(5px);
	transition: all 1s;
	transform: scale(0.5);
}

.tools-item:nth-child(1) {
	transition-delay: 2000ms;
}
.tools-item:nth-child(2) {
	transition-delay: 1800ms;
}
.tools-item:nth-child(3) {
	transition-delay: 1600ms;
}
.tools-item:nth-child(4) {
	transition-delay: 1400ms;
}
.tools-item:nth-child(5) {
	transition-delay: 1200ms;
}
.tools-item:nth-child(6) {
	transition-delay: 1000ms;
}
.tools-item:nth-child(7) {
	transition-delay: 800ms;
}
.tools-item:nth-child(8) {
	transition-delay: 600ms;
}
.tools-item:nth-child(9) {
	transition-delay: 400ms;
}
.tools-item:nth-child(10) {
	transition-delay: 200ms;
}

.show-text {
	opacity: 1;
	filter: blur(0);
	transform: scale(1);
}

.show {
	opacity: 1;
	filter: blur(0);
	transform: translateX(0);
}

/* MikeFlix Case Study */

.mikeflix-case-study-section {
	background-color: #f9f9f9;
	margin: 0 auto;
	padding-bottom: 0px;
}

.mikeflix-title {
	text-align: center;
	padding-top: 130px;
	font-size: 4rem;
}

.mikeflix-title::after {
	content: '';
	margin: 0 auto;
	margin-top: 5px;
	display: block;
	height: 5px;
	width: 250px;
	background: var(--clr-mid-light);
	left: 50%;
	border-radius: 5px;
}

.intro-container {
	margin-top: 100px;
}

.approach {
	text-align: center;
	font-size: 2rem;
	margin-bottom: 80px;
}

.mikeflix-img {
	margin: auto 0;
}

.client {
	margin-bottom: 0px;
}

.challenges {
	max-width: 1380px;
	margin: 0 auto;
}

.conclusion-container {
	display: flex;
	justify-content: center;
	gap: 80px;
}

.takeaways-container {
	text-align: center;
	font-size: 2rem;
	margin-top: 80px;
}

.key-container {
	display: flex;
	justify-content: center;
	gap: 100px;
	margin-bottom: 0px;
}

.takeaways {
	line-height: 1.5;
	font-size: 1.25rem;
}

.footer-case-study {
	margin-top: 30px;
}
/* ... */

